--- a/less/app.less
+++ b/less/app.less
@@ -2100,6 +2100,13 @@ body {
 	background: @gray; 
 }
 
+#access .login .tips {
+	color: @orange;
+	font-size: @tinySize;
+	display: inline-block;
+	margin-bottom: 10px;
+}
+
 #access .ng-untouched, #access .ng-valid, #access .ng-dirty {
 	background: @gray;
 }
