--- a/templates/common/forgetPassword.html
+++ b/templates/common/forgetPassword.html
@@ -9,8 +9,9 @@
         <span class="space">
           Enter your email address and we will send you a link to reset your password
         </span>
+        <small class="tips" *ngIf="isTips.otherError">send email failed</small>
         <span class="space user">
-          <input type="text" placeholder="email" [(ngModel)]="user.email" name="email" autocomplete="off">
+          <input type="text" placeholder="email" [(ngModel)]="user.email" name="email" autocomplete="off" (change)="tips('otherError',false)">
           <i class="fa fa-envelope"></i>
         </span>
         <button class="space sign-in" (click)="sendEmail()">Send</button>
