--- a/templates/common/login.html
+++ b/templates/common/login.html
@@ -6,6 +6,7 @@
   <div class="content">
     <div class="login-content">
       <div class="login">
+        <span class="tips" *ngIf="isTips">invalid username or password</span>
         <span class="space user">
           <input type="text" placeholder="Username or Email" [(ngModel)]="user.username" name="username" autocomplete="off">
           <i class="fa fa-user"></i>
