--- a/less/color.less
+++ b/less/color.less
@@ -8,6 +8,7 @@
 @userFormWhite: #F7F7F7; // 247 247 247
 @userEmailWhite: #F2F2F2; // 242 242 242
 @triggerWhite: #f1f1f1;
+@registerEmailWhite: #eee;
 
 
 @red: #f00;
@@ -58,6 +59,7 @@
 @teamFontBlue: #15527B; // 21 82 123
 @teamTitleBlue: #5D798C; // 93 121 140
 @repoNamelBlue: #073b77;
+@registerEmailBlue: #2f5eac;
 
 
 
