--- a/less/app.less
+++ b/less/app.less
@@ -12,8 +12,9 @@ a {
 	color: @black;
 }
 
-a, a:hover, a:active {
+a, a:hover, a:active, a:focus{
 	text-decoration: none !important;
+	outline: none;
 }
 
 ul {
@@ -920,17 +921,29 @@ body {
 	font-size: 0;
 }
 
-#newRepo select {
+#newRepo .select {
 	width: 42%;
-	padding: 12px;
+	padding: 22px 12px 22px;
 	background: #d7d7d7;
 	color: @gray;
 	margin-right: 3%;
 	border-radius: 5px;
 	font-size: 12px;
+	display: inline-block;
+	box-shadow: 1px 1px 1px @insetBlack inset;
+	position: relative;
+	vertical-align: top;
 }
 
-#newRepo select + input {
+#newRepo .select i {
+	position: absolute;
+	right: 10px;
+	top: 12px;
+	color: @white;
+	font-size: @smallSize;
+}
+
+#newRepo .select + input {
 	width: 55%;
 }
 #newRepo option {
