--- a/less/app.less
+++ b/less/app.less
@@ -1887,6 +1887,13 @@ body {
 	overflow-y: hidden;
 }
 
+#access .require {
+	color: @menuGray;
+	display: inline-block;
+	margin-bottom: 20px;
+}
+
+
 #access .content {
 	background: @repoNewGray;
 	width: 100%;
