--- a/templates/common/register.html
+++ b/templates/common/register.html
@@ -13,8 +13,9 @@
           <small class="tips" *ngIf="isTips.username">username is required</small>
         </span>
         <span class="space user">
-          <input type="text" placeholder="email" [(ngModel)]="user.email" name="email" autocomplete="off" (change)="tips('username',false)">
-          <i class="fa fa-envelope"></i><br/>
+          <input type="text" placeholder="Email" [(ngModel)]="user.email" name="email" autocomplete="off" (change)="tips('username',false)">
+          <i class="fa fa-envelope"></i>
+          <br/>
           <small class="tips" *ngIf="isTips.email">email is required</small><br/>
           <small class="tips" *ngIf="isTips.isEmailRight">invalid email</small>
         </span>
@@ -23,6 +24,7 @@
           <i class="fa fa-lock"></i><br/>
           <small class="tips" *ngIf="isTips.password">password is required</small>
         </span>
+        <small class="require">*Password at least 8 bit,it contains numbers, capital letters,not including user name</small>
         <button class="space sign-in" (click)="signUp()">Sign Up</button>
       </div>
     </div>
