modify res status

--- a/less/app.less
+++ b/less/app.less
@@ -2336,7 +2336,7 @@ body {
 #access .browse .info li {
 	float: left;
 	background: @browseWhite;
-	padding: 26px 0;
+	padding: 25px 0 26px;
 	text-align: center;
 }
 
@@ -2361,13 +2361,13 @@ body {
 #access .browse .info .star, 
 #access .browse .info .download {
 	width: 20%;
-	padding: 32px 0;
+	padding: 30px 0;
 	color: @browseIconGray;
 }
 
 #access .browse .info .detail {
 	width: 17%;
-	padding: 32px 0;
+	padding: 30px 0;
 	background: @browseIconGray;
 	color: #fff;
 }
