--- a/css/app.css
+++ b/css/app.css
@@ -2022,7 +2022,7 @@ body {
 #access .browse .info li {
   float: left;
   background: #F3F3F3;
-  padding: 26px 0;
+  padding: 25px 0 26px;
   text-align: center;
 }
 #access .browse .info li i {
@@ -2042,12 +2042,12 @@ body {
 #access .browse .info .star,
 #access .browse .info .download {
   width: 20%;
-  padding: 32px 0;
+  padding: 30px 0;
   color: #999999;
 }
 #access .browse .info .detail {
   width: 17%;
-  padding: 32px 0;
+  padding: 30px 0;
   background: #999999;
   color: #fff;
 }
