--- a/templates/common/register.html
+++ b/templates/common/register.html
@@ -22,7 +22,7 @@
         <span class="space pwd">
           <input type="password" placeholder="Password" [(ngModel)]="user.password" name="password" autocomplete="off" (change)="tips('username',false)">
           <i class="fa fa-lock"></i><br/>
-          <small class="tips" *ngIf="isTips.password">password is required</small>
+          <small class="tips" *ngIf="isTips.password">{{isTips.passwordText}}</small>
           <small class="tips" *ngIf="isTips.pwdError">password is invalid</small>
         </span>
         <small class="require">*Password at least 8 bit,it contains numbers, capital letters,not including user name</small>
