--- a/less/app.less
+++ b/less/app.less
@@ -2123,7 +2123,7 @@ body {
 #access .tips {
 	color: @orange;
 	font-size: @tinySize;
-	display: inline-block;
+	display: block;
 	margin-bottom: 10px;
 }
 
