--- a/templates/common/register.html
+++ b/templates/common/register.html
@@ -8,23 +8,21 @@
       <div class="sign-up">
         <small class="tips" *ngIf="isTips.otherError">{{isTips.otherText}}</small>
         <span class="space user">
-          <input type="text" placeholder="Username" [(ngModel)]="user.username" name="username" autocomplete="off" (change)="tips('username',false)">
+          <input type="text" placeholder="Username" [(ngModel)]="user.username" name="username" autocomplete="off">
           <i class="fa fa-user"></i><br/>
           <small class="tips" *ngIf="isTips.username">username is required</small>
           <small class="tips" *ngIf="isTips.isUsernameRight">username is invalid</small>
         </span>
         <small class="require">*user name must be the numbers and letters</small>
         <span class="space user">
-          <input type="text" placeholder="Email" [(ngModel)]="user.email" name="email" autocomplete="off" (change)="tips('username',false)">
-          <i class="fa fa-envelope"></i>
-          <br/>
-          <small class="tips" *ngIf="isTips.emailError">{{isTips.emailText}}</small>
+          <input type="text" placeholder="Email" [(ngModel)]="user.email" name="email" autocomplete="off">
+          <i class="fa fa-envelope"></i><br/>
+          <small class="tips" *ngIf="isTips.email">{{isTips.emailText}}</small>
         </span>
         <span class="space pwd">
-          <input type="password" placeholder="Password" [(ngModel)]="user.password" name="password" autocomplete="off" (change)="tips('username',false)">
+          <input type="password" placeholder="Password" [(ngModel)]="user.password" name="password" autocomplete="off">
           <i class="fa fa-lock"></i><br/>
           <small class="tips" *ngIf="isTips.password">{{isTips.passwordText}}</small>
-          <!-- <small class="tips" *ngIf="isTips.pwdError">password is invalid</small> -->
         </span>
         <small class="require">*Password at least 8 bit,it contains numbers, capital letters,not including user name</small>
         <button class="space sign-in" (click)="signUp()">Sign Up</button>
