modify err of email

--- a/templates/common/register.html
+++ b/templates/common/register.html
@@ -17,7 +17,7 @@
         <span class="space user">
           <input type="text" placeholder="Email" [(ngModel)]="user.email" name="email" autocomplete="off">
           <i class="fa fa-envelope"></i><br/>
-          <small class="tips" *ngIf="isTips.email">{{isTips.emailText}}</small>
+          <small class="tips" *ngIf="isTips.email">{{isTips.emailInfo}}</small>
         </span>
         <span class="space pwd">
           <input type="password" placeholder="Password" [(ngModel)]="user.password" name="password" autocomplete="off">
