--- a/templates/common/register.html
+++ b/templates/common/register.html
@@ -17,7 +17,8 @@
         <span class="space user">
           <input type="email" placeholder="Email" [(ngModel)]="user.email" name="email" autocomplete="off">
           <i class="fa fa-envelope"></i><br/>
-          <small class="tips" *ngIf="isTips.email">{{isTips.emailInfo}}</small>
+          <small class="tips" *ngIf="isTips.email">email is required</small>
+          <small class="tips" *ngIf="isTips.emailError">email is invalid</small>
         </span>
         <span class="space pwd">
           <input type="password" placeholder="Password" [(ngModel)]="user.password" name="password" autocomplete="off">
