add brochur.html & select-option

--- a/css/app.css
+++ b/css/app.css
@@ -756,16 +756,42 @@ body {
 }
 #newRepo .select {
   width: 42%;
-  padding: 22px 12px 22px;
-  background: #d7d7d7;
   color: #DFDFDF;
   margin-right: 3%;
-  border-radius: 5px;
-  font-size: 12px;
+  display: inline-block;
+  vertical-align: top;
+  position: relative;
+}
+#newRepo .chosed {
   display: inline-block;
   box-shadow: 1px 1px 1px #b4b3b3 inset;
-  position: relative;
-  vertical-align: top;
+  padding: 22px 12px;
+  border-radius: 5px;
+  width: 100%;
+  color: #191919;
+  background: #DFDFDF;
+}
+#newRepo .option {
+  position: absolute;
+  top: 45px;
+  right: 0;
+  width: 100%;
+  background: #d7d7d7;
+  border: 1px solid #DFDFDF;
+  color: #191919;
+  font-size: 1.8rem;
+  text-align: center;
+}
+#newRepo .option li {
+  cursor: pointer;
+  height: 44px;
+  line-height: 44px;
+  padding: 0;
+  border: none;
+}
+#newRepo .option li:hover {
+  background: #3DA1E5;
+  color: #fff;
 }
 #newRepo .select i {
   position: absolute;
@@ -2116,4 +2142,108 @@ body {
   top: -webkit-calc((100% - 340px) / 2);
 }
 /* register email end */
+/* brochur start */
+#brochur {
+  width: 100%;
+  height: 100%;
+  overflow-x: hidden;
+}
+#brochur .info-one {
+  width: 100%;
+  background: #fff;
+  text-align: center;
+  padding-top: 40px;
+  padding-bottom: 130px;
+}
+#brochur .info-one .title {
+  font-size: 2.4rem;
+  margin: 20px auto;
+}
+#brochur .info-one .space {
+  margin-left: 12px;
+  font-size: 2rem;
+}
+#brochur .info-one .space:hover {
+  border-bottom: 1px solid #099698;
+}
+#brochur .info-one .banner {
+  width: 100%;
+  height: auto;
+}
+#brochur .info-two,
+#brochur .info-three,
+#brochur .info-four,
+#brochur .info-five {
+  background: #eee;
+  border-top: 2px solid #c1bfbf;
+  width: 105%;
+  transform: translate(-32px, -55px) rotate(5deg);
+  box-shadow: 1px 1px 1px #c1bfbf inset;
+  padding: 40px 0 200px;
+}
+#brochur .info-three,
+#brochur .info-five {
+  background: #fff;
+  box-shadow: none;
+}
+#brochur .info-three {
+  transform: translate(-25px, -150px) rotate(-5deg);
+}
+#brochur .info-five {
+  transform: translate(-25px, -220px) rotate(-5deg);
+}
+#brochur .info-two .title,
+#brochur .info-three .title,
+#brochur .info-four .title,
+#brochur .info-five .title {
+  font-size: 2rem;
+  color: #099698;
+}
+#brochur .info-three {
+  padding-bottom: 0;
+}
+#brochur .info-one img,
+#brochur .info-two img,
+#brochur .info-three img,
+#brochur .info-four img,
+#brochur .info-five img {
+  width: 100%;
+  height: auto;
+  max-height: 100%;
+}
+#brochur .info-two .rotate,
+#brochur .info-four .rotate {
+  transform: rotate(-5deg);
+}
+#brochur .info-three .rotate,
+#brochur .info-five .rotate {
+  transform: rotate(5deg);
+}
+#brochur .info-six {
+  background: #eee;
+  padding: 100px 0 100px;
+  width: 105%;
+}
+#brochur .info-six .title {
+  font-size: 2.4rem;
+  text-align: center;
+  margin-bottom: 40px;
+}
+#brochur .info-six .start {
+  padding: 10px 20px;
+  font-size: 2rem;
+  border: 4px solid #099698;
+  border-radius: 5px;
+}
+#brochur .info-blank {
+  padding: 0;
+  height: 50px;
+  width: 105%;
+  background: #eee;
+  transform: translate(-25px, -280px) rotate(5deg);
+}
+#brochur .info-six {
+  transform: translate(0, -280px);
+}
+/* brochur end */
 /*# sourceMappingURL=app.css.map */
