--- a/less/color.less
+++ b/less/color.less
@@ -44,6 +44,8 @@
 @modifyGray: #878787;
 @triggerNavGray: #565656;
 @triggerDropGray: #9f9f9f;
+@brochurGray: #c1bfbf;
+@optionGray: #d7d7d7;
 
 
 
@@ -60,6 +62,9 @@
 @teamTitleBlue: #5D798C; // 93 121 140
 @repoNamelBlue: #073b77;
 @registerEmailBlue: #2f5eac;
+
+
+@brochurGreen: #099698;
 
 
 
