--- a/less/app.less
+++ b/less/app.less
@@ -923,16 +923,47 @@ body {
 
 #newRepo .select {
 	width: 42%;
-	padding: 22px 12px 22px;
-	background: #d7d7d7;
 	color: @gray;
 	margin-right: 3%;
-	border-radius: 5px;
-	font-size: 12px;
 	display: inline-block;
-	box-shadow: 1px 1px 1px @insetBlack inset;
 	position: relative;
 	vertical-align: top;
+	position: relative;
+}
+
+#newRepo .chosed {
+	display: inline-block;
+	box-shadow: 1px 1px 1px @insetBlack inset;
+	padding: 22px 12px;
+	border-radius: 5px;
+	width: 100%;
+	color: @black;
+	background: @gray;
+}
+
+#newRepo .option {
+	position: absolute;
+	top: 45px;
+	right: 0;
+	width: 100%;
+	background: @optionGray;
+	border: 1px solid @repoFormGray;
+	color: @black;
+	font-size: @baseSize;
+	text-align: center;
+}
+
+#newRepo .option li {
+	cursor: pointer;
+	height: 44px;
+	line-height: 44px;
+	padding: 0;
+	border: none;
+}
+
+#newRepo .option li:hover {
+	background: @baseBlue;
+	color: @white;
 }
 
 #newRepo .select i {
@@ -2448,3 +2479,136 @@ body {
 	top: e("-webkit-calc((100% - 340px) / 2)");	
 }
 /* register email end */ 
+/* brochur start */
+
+#brochur {
+	width: 100%;
+	height: 100%;
+	overflow-x: hidden;
+}
+
+#brochur .info-one {
+ 	width: 100%;
+ 	background: @white;
+ 	text-align: center;
+ 	padding-top: 40px;
+ 	padding-bottom: 130px;
+}
+
+#brochur .info-one .title {
+ 	font-size: @middleSize;
+ 	margin: 20px auto;
+}
+
+#brochur .info-one .space {
+ 	margin-left: 12px;
+ 	font-size: @smallSize;
+}
+
+#brochur .info-one .space:hover {
+ 	border-bottom: 1px solid @brochurGreen;
+}
+
+#brochur .info-one .banner {
+ 	width: 100%;
+ 	height: auto;
+}
+
+ // #brochur .content {
+ // 	width: 100%;
+ // 	height: 100%;
+ // 	background: #ddd;
+ // 	border-bottom: 2px solid #aaa;
+ // 	transform:rotate(5deg) translate(10,20);
+ // 	border:1px solid #aaa;
+ // }
+
+#brochur .info-two,
+#brochur .info-three,
+#brochur .info-four,
+#brochur .info-five {
+ 	background: @registerEmailWhite;
+ 	border-top: 2px solid @brochurGray;
+ 	width: 105%;
+ 	transform: translate(-32px, -55px) rotate(5deg);
+ 	box-shadow: 1px 1px 1px @brochurGray inset;
+	padding: 40px 0 200px;
+}
+
+#brochur .info-three,
+#brochur .info-five {
+ 	background: @white;
+ 	box-shadow: none;
+}
+
+#brochur .info-three {
+ 	transform: translate(-25px, -150px) rotate(-5deg);
+}
+
+#brochur .info-five {
+ 	transform: translate(-25px, -220px) rotate(-5deg);
+}
+
+#brochur .info-two .title,
+#brochur .info-three .title,
+#brochur .info-four .title,
+#brochur .info-five .title {
+ 	font-size: @smallSize;
+ 	color: @brochurGreen;
+}
+
+#brochur .info-three {
+	padding-bottom: 0;
+}
+ 
+#brochur .info-one img,
+#brochur .info-two img,
+#brochur .info-three img,
+#brochur .info-four img,
+#brochur .info-five img {
+	width: 100%;
+	height: auto;
+	max-height: 100%;
+}
+
+#brochur .info-two .rotate,
+#brochur .info-four .rotate {
+ 	transform: rotate(-5deg);
+}
+
+#brochur .info-three .rotate,
+#brochur .info-five .rotate  {
+ 	transform: rotate(5deg);
+}
+
+#brochur .info-six {
+	background: @registerEmailWhite;
+	padding: 100px 0 100px;
+	width: 105%;
+}
+
+#brochur .info-six .title {
+	font-size: @middleSize;
+	text-align: center;
+	margin-bottom: 40px;
+}
+
+#brochur .info-six .start {
+	padding: 10px 20px;
+	font-size: @smallSize;
+	border: 4px solid @brochurGreen;
+	border-radius: 5px;
+}
+
+#brochur .info-blank {
+	padding: 0;
+	height: 50px;
+	width: 105%;
+	background: @registerEmailWhite;
+ 	transform: translate(-25px, -280px) rotate(5deg);
+}
+
+#brochur .info-six {
+	transform: translate(0, -280px);
+}
+/* brochur end */ 
