--- a/templates/repository/repoCreate.html
+++ b/templates/repository/repoCreate.html
@@ -26,9 +26,17 @@
         </ul>
         <div class="col-xs-12 col-md-6 info">
           <div class="mar-bt-twenty clear-gap">
-            <span class="select" type="button">
-              <i class="fa fa-caret-down"></i>
-            </span>
+            <div class="select">
+              <span class="chosed" (click)="isShowOrg=!isShowOrg">
+                {{chosedOrgName}}
+                <i class="fa fa-caret-down"></i>
+                }
+              </span>
+              <ul class="option" *ngIf="isShowOrg">
+                <li *ngFor="let item of orgList" (click)="choseOrg(item)">{{item.name}}</li>
+              </ul>
+            </div>
+            
             <!-- <ul class="dropdown-menu" role="menu" aria-labelledby="dropdownMenu1">
               <li (click)="getUserName('dockyard')">dockyard</li>
               <li (click)="getUserName('surface')">surface</li>
