--- a/less/app.less
+++ b/less/app.less
@@ -2492,21 +2492,21 @@ body {
  	background: @white;
  	text-align: center;
  	padding-top: 40px;
- 	padding-bottom: 130px;
 }
 
 #brochur .info-one .title {
- 	font-size: @middleSize;
- 	margin: 20px auto;
+ 	font-size: @bigSize;
+ 	margin: 40px auto;
 }
 
 #brochur .info-one .space {
  	margin-left: 12px;
  	font-size: @smallSize;
+ 	padding: 5px 0;
 }
 
 #brochur .info-one .space:hover {
- 	border-bottom: 1px solid @brochurGreen;
+ 	border-bottom: 1px solid @black;
 }
 
 #brochur .info-one .banner {
@@ -2528,32 +2528,32 @@ body {
 #brochur .info-four,
 #brochur .info-five {
  	background: @registerEmailWhite;
- 	border-top: 2px solid @brochurGray;
- 	width: 105%;
- 	transform: translate(-32px, -55px) rotate(5deg);
- 	box-shadow: 1px 1px 1px @brochurGray inset;
-	padding: 40px 0 200px;
+ 	// border-top: 2px solid @brochurGray;
+ 	width: 100%;
+ 	// transform: translate(-32px, -55px) rotate(5deg);
+ 	// box-shadow: 1px 1px 1px @brochurGray inset;
+	padding: 0;
 }
 
 #brochur .info-three,
 #brochur .info-five {
  	background: @white;
- 	box-shadow: none;
+ 	// box-shadow: none;
 }
 
 #brochur .info-three {
- 	transform: translate(-25px, -150px) rotate(-5deg);
+ 	// transform: translate(-25px, -150px) rotate(-5deg);
 }
 
 #brochur .info-five {
- 	transform: translate(-25px, -220px) rotate(-5deg);
+ 	// transform: translate(-25px, -220px) rotate(-5deg);
 }
 
 #brochur .info-two .title,
 #brochur .info-three .title,
 #brochur .info-four .title,
 #brochur .info-five .title {
- 	font-size: @smallSize;
+ 	font-size: @bigSize;
  	color: @brochurGreen;
 }
 
@@ -2561,6 +2561,26 @@ body {
 	padding-bottom: 0;
 }
  
+#brochur .text {
+	font-size: @middleSize;
+} 
+
+#brochur .media-left, #brochur .media-body {
+	vertical-align: middle;
+}
+
+#brochur .info-two .media-left,
+#brochur .info-four .media-left {
+	padding-right: 10%;
+	width: 40%;
+}
+
+#brochur .info-three .media-body,
+#brochur .info-five .media-body {
+	padding-left: 10%;
+	width: 40%;
+}
+
 #brochur .info-one img,
 #brochur .info-two img,
 #brochur .info-three img,
@@ -2571,44 +2591,43 @@ body {
 	max-height: 100%;
 }
 
-#brochur .info-two .rotate,
-#brochur .info-four .rotate {
- 	transform: rotate(-5deg);
+#brochur .info-one img {
+	width: 200px;
+	max-width: 100%;
+	height: auto;
+	margin-top: -6px;
 }
 
-#brochur .info-three .rotate,
-#brochur .info-five .rotate  {
- 	transform: rotate(5deg);
+#brochur .add-bg {
+	height: 213px;
+}
+
+#brochur .add-bg img {
+	width: 100%;
+	height: auto;
 }
 
 #brochur .info-six {
 	background: @registerEmailWhite;
-	padding: 100px 0 100px;
-	width: 105%;
+	padding: 0 0 280px;
+	width: 100%;
 }
 
 #brochur .info-six .title {
-	font-size: @middleSize;
+	font-size: @bigSize;
 	text-align: center;
 	margin-bottom: 40px;
 }
 
+#brochur .info-six .rotate {
+	position: relative;
+	top: 65px;
+}
+
 #brochur .info-six .start {
-	padding: 10px 20px;
-	font-size: @smallSize;
-	border: 4px solid @brochurGreen;
+	padding: 12px 38px;
+	font-size: @middleSize;
+	border: 3px solid @brochurGreen;
 	border-radius: 5px;
-}
-
-#brochur .info-blank {
-	padding: 0;
-	height: 50px;
-	width: 105%;
-	background: @registerEmailWhite;
- 	transform: translate(-25px, -280px) rotate(5deg);
-}
-
-#brochur .info-six {
-	transform: translate(0, -280px);
 }
 /* brochur end */ 
