--- a/css/app.css
+++ b/css/app.css
@@ -765,10 +765,13 @@ body {
 #newRepo .chosed {
   display: inline-block;
   box-shadow: 1px 1px 1px #b4b3b3 inset;
-  padding: 22px 12px;
+  padding: 0 12px;
   border-radius: 5px;
+  height: 44px;
+  line-height: 44px;
   width: 100%;
   color: #191919;
+  font-size: 1.8rem;
   background: #DFDFDF;
 }
 #newRepo .option {
@@ -776,7 +779,7 @@ body {
   top: 45px;
   right: 0;
   width: 100%;
-  background: #d7d7d7;
+  background: #C0C0C0;
   border: 1px solid #DFDFDF;
   color: #191919;
   font-size: 1.8rem;
@@ -790,14 +793,14 @@ body {
   border: none;
 }
 #newRepo .option li:hover {
-  background: #3DA1E5;
+  background: #919191;
   color: #fff;
 }
 #newRepo .select i {
   position: absolute;
   right: 10px;
   top: 12px;
-  color: #fff;
+  color: #C0C0C0;
   font-size: 2rem;
 }
 #newRepo .select + input {
@@ -807,7 +810,7 @@ body {
   padding: 12px;
 }
 #newRepo .btn-create {
-  font-size: 16px;
+  font-size: 2rem;
   width: 100%;
   height: 40px;
   line-height: 40px;
@@ -2252,4 +2255,37 @@ body {
   border-radius: 5px;
 }
 /* brochur end */
+/* prompt start */
+#prompt .mcover {
+  position: fixed;
+  top: 0;
+  bottom: 0;
+  left: 0;
+  right: 0;
+  width: 100%;
+  height: 100%;
+  background: #000;
+  opacity: 0.5;
+  z-index: 10000;
+}
+#prompt .info {
+  position: fixed;
+  top: calc((100% - 260px) / 2);
+  left: calc((100% - 380px) / 2);
+  width: 380px;
+  padding: 60px 40px;
+  text-align: center;
+  color: #191919;
+  background: #f1f1f1;
+  font-size: 2rem;
+  border-radius: 5px;
+  box-shadow: 0 5px 15px rgba(0, 0, 0, 0.5);
+  z-index: 10000;
+}
+#prompt .info .text {
+  display: inline-block;
+  text-align: left;
+  color: #f00;
+}
+/* prompt end */
 /*# sourceMappingURL=app.css.map */
