--- a/templates/repository/repoCreate.html
+++ b/templates/repository/repoCreate.html
@@ -13,7 +13,7 @@
           </li>
           <li>
             <span [ngClass]=" step=== 3? 'step-brown' : '' ">3</span>
-            <b>Add a short description </b>
+            <b>Add a short description (Required) </b>
           </li>
           <li>
             <span [ngClass]=" step=== 4? 'step-brown' : '' ">4</span>
@@ -27,38 +27,14 @@
         <div class="col-xs-12 col-md-6 info">
           <div class="mar-bt-twenty clear-gap">
             <div class="select">
-              <span class="chosed" (click)="isShowOrg=!isShowOrg">
-                {{chosedOrgName}}
+              <span class="chosed" (click)="showOptions()">
+                {{repo.username}}
                 <i class="fa fa-caret-down"></i>
-                }
               </span>
               <ul class="option" *ngIf="isShowOrg">
                 <li *ngFor="let item of orgList" (click)="choseOrg(item)">{{item.name}}</li>
               </ul>
             </div>
-            
-            <!-- <ul class="dropdown-menu" role="menu" aria-labelledby="dropdownMenu1">
-              <li (click)="getUserName('dockyard')">dockyard</li>
-              <li (click)="getUserName('surface')">surface</li>
-            </ul> -->
-
-
-
-            <!-- <button class="dropdown-toggle" type="button" id="teamName" data-toggle="dropdown" (click)="changeStep(1)">
-              
-            </button>
-            <span>
-              dfsfsdf
-              <i class=""></i>
-            </span> -->
-            <!-- <ul class="dropdown-menu" aria-labelledby="teamName">
-              <li (click)="getUserName('dockyard')">dockyard</li>
-              <li (click)="getUserName('surface')">surface</li>
-            </ul> -->
-            <!-- <select [(ngModel)]="repo.username" name="username" (focus)="changeStep(1)">
-              <option value="1">dockyard</option>
-              <option value="2">surface</option>
-            </select> -->
             <input type="text" placeholder="name" [(ngModel)]="repo.repository" name="repository" (focus)="changeStep(2)"/>
           </div>
           <p class="mar-bt-twenty">
@@ -81,5 +57,6 @@
       </div>
     </div>
   </div>
+  <prompt [promptInfo]="promptInfo"></prompt>
 </div>
 
