--- a/less/app.less
+++ b/less/app.less
@@ -1653,6 +1653,14 @@ body {
 	}
 }
 
+#createOrg .teams .active {
+	background: @teamGray;
+	color: #fff;
+	i {
+		color: #fff;
+	}
+}
+
 #createOrg .teams li i,
 #createOrg .members li i {
 	position: absolute;
