modify: import ico

--- a/templates/user/setting.html
+++ b/templates/user/setting.html
@@ -56,7 +56,7 @@
                 <div class="col-md-6 text">
                   <h4>Change Password</h4>
                   <p>
-                    Please choose a password which is longer than 6 characters
+                    Password at least 8 bit,it contains numbers, capital letters,not including user name
                   </p>
                 </div>
                 <div class="col-md-6 col-xs-12">
